# winapi-snippets-cmake

./: .gitignore  CMakeLists.txt
src/: fs.cpp  gpo.cpp  upscale.cpp
